force-app/main/default/objects/Deal_Participant__c/Deal_Participant__c.object-meta.xml
<CustomObject>
<label
  >Deal Participant</label><pluralLabel>Deal Participants</pluralLabel>
    <nameField><displayFormat>DPT-{00000000}</displayFormat><label
    >Deal Participant Number</label><type>AutoNumber</type></nameField>
    <sharingModel>Private</sharingModel><externalSharingModel
  >Private</externalSharingModel><enableReports
  >true</enableReports><enableActivities>false</enableActivities><enableHistory
  >true</enableHistory>
</CustomObject>