force-app/main/default/objects/Deal_Participant__c/fields/Access_Level__c.field-meta.xml
<CustomField>
    <fullName>Access_Level__c</fullName>
    <description
  >Resolved by Deal_Participant_Access_Policy_Resolver at activation time
  (or set explicitly by the inviter's requested access level) - not
  directly user-editable. Drives DealParticipantSharingService's Read/Edit
  mapping for Apex Managed Sharing.</description>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Summary</fullName><default>false</default><label
        >Summary</label></value>
            <value><fullName>Contributor</fullName><default
        >false</default><label>Contributor</label></value>
            <value><fullName>Collaborator</fullName><default
        >false</default><label>Collaborator</label></value>
            <value><fullName>Commercial</fullName><default>false</default><label
        >Commercial</label></value>
            <value><fullName>Full Partner</fullName><default
        >false</default><label>Full Partner</label></value>
            <value><fullName>Internal Only</fullName><default
        >false</default><label>Internal Only</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>