force-app/main/default/objects/Deal_Participant__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Participants (Account)</relationshipLabel>
    <relationshipName>Deal_Participants_Account</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>