force-app/main/default/objects/Deal_Participant__c/fields/At_Risk_Notified__c.field-meta.xml
<CustomField>
    <fullName>At_Risk_Notified__c</fullName>
    <description>Set by DealParticipantExpiryBatch the first time an
  Invited/Accepted invitation crosses its SLA warning threshold, so the
  DealParticipantInvitationAtRisk notification fires only once per
  invitation rather than every batch run.</description>
    <defaultValue>false</defaultValue>
    <label>At Risk Notified</label>
    <type>Checkbox</type>
</CustomField>