force-app/main/default/objects/Deal_Participant__c/fields/Can_Request_Extension__c.field-meta.xml
<CustomField>
    <fullName>Can_Request_Extension__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Request Extension</label>
    <type>Checkbox</type>
</CustomField>