force-app/main/default/objects/Deal_Participant__c/fields/Can_Upload_Evidence__c.field-meta.xml
<CustomField>
    <fullName>Can_Upload_Evidence__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Upload Evidence</label>
    <type>Checkbox</type>
</CustomField>