force-app/main/default/objects/Deal_Participant__c/fields/Can_View_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Can_View_Opportunity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can View Opportunity</label>
    <type>Checkbox</type>
</CustomField>