force-app/main/default/objects/Deal_Participant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <label>Contact</label>
    <type>Lookup</type>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Deal Participants</relationshipLabel>
    <relationshipName>Deal_Participants</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>