force-app/main/default/objects/Deal_Participant__c/fields/Declined_On__c.field-meta.xml
<CustomField>
    <fullName>Declined_On__c</fullName>
    <label>Declined On</label>
    <type>DateTime</type>
</CustomField>