force-app/main/default/objects/Deal_Participant__c/fields/Effective_To__c.field-meta.xml
<CustomField>
    <fullName>Effective_To__c</fullName>
    <label>Effective To</label>
    <type>DateTime</type>
</CustomField>