force-app/main/default/objects/Deal_Participant__c/fields/Invitation_Reason__c.field-meta.xml
<CustomField>
    <fullName>Invitation_Reason__c</fullName>
    <label>Invitation Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>