force-app/main/default/objects/Deal_Participant__c/fields/Invited_By__c.field-meta.xml
<CustomField>
    <fullName>Invited_By__c</fullName>
    <label>Invited By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deal Participants Invited</relationshipLabel>
    <relationshipName>Deal_Participants_Invited</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>