force-app/main/default/objects/Deal_Participant__c/fields/Invited_On__c.field-meta.xml
<CustomField>
    <fullName>Invited_On__c</fullName>
    <label>Invited On</label>
    <type>DateTime</type>
</CustomField>