force-app/main/default/objects/Deal_Participant__c/fields/Last_Activity_On__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_On__c</fullName>
    <label>Last Activity On</label>
    <type>DateTime</type>
</CustomField>