force-app/main/default/objects/Deal_Participant__c/fields/Participant_Type__c.field-meta.xml
<CustomField>
    <fullName>Participant_Type__c</fullName>
    <label>Participant Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Originating Partner</fullName><default
        >false</default><label>Originating Partner</label></value>
            <value><fullName>Co-Sell Partner</fullName><default
        >false</default><label>Co-Sell Partner</label></value>
            <value><fullName>Referral Partner</fullName><default
        >false</default><label>Referral Partner</label></value>
            <value><fullName>Distributor</fullName><default
        >false</default><label>Distributor</label></value>
            <value><fullName>Reseller</fullName><default>false</default><label
        >Reseller</label></value>
            <value><fullName>Implementation Partner</fullName><default
        >false</default><label>Implementation Partner</label></value>
            <value><fullName>Technology Partner</fullName><default
        >false</default><label>Technology Partner</label></value>
            <value><fullName>Internal Sales</fullName><default
        >false</default><label>Internal Sales</label></value>
            <value><fullName>Channel Manager</fullName><default
        >false</default><label>Channel Manager</label></value>
            <value><fullName>Account Executive</fullName><default
        >false</default><label>Account Executive</label></value>
            <value><fullName>Solution Engineer</fullName><default
        >false</default><label>Solution Engineer</label></value>
            <value><fullName>Customer Contact</fullName><default
        >false</default><label>Customer Contact</label></value>
            <value><fullName>Executive Sponsor</fullName><default
        >false</default><label>Executive Sponsor</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>