force-app/main/default/objects/Deal_Participant__c/fields/Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Partner_Account__c</fullName>
    <label>Partner Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Deal Participants (Partner)</relationshipLabel>
    <relationshipName>Deal_Participants_Partner</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>