force-app/main/default/objects/Deal_Participant__c/fields/Removal_Reason__c.field-meta.xml
<CustomField>
    <fullName>Removal_Reason__c</fullName>
    <label>Removal Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>