force-app/main/default/objects/Deal_Participant__c/fields/Removed_On__c.field-meta.xml
<CustomField>
    <fullName>Removed_On__c</fullName>
    <label>Removed On</label>
    <type>DateTime</type>
</CustomField>