force-app/main/default/objects/Deal_Participant__c/fields/Respond_By__c.field-meta.xml
<CustomField>
    <fullName>Respond_By__c</fullName>
    <label>Respond By</label>
    <type>DateTime</type>
</CustomField>