force-app/main/default/objects/Deal_Participant__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <label>User</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Deal Participants</relationshipLabel>
    <relationshipName>Deal_Participants</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>